--- a/src/app/children/head/dashboard/dashboard.html
+++ b/src/app/children/head/dashboard/dashboard.html
@@ -10,7 +10,7 @@
             tuiTab
             type="button"
         >
-            Формы
+            Новая форма
         </button>
 
         <button
@@ -21,7 +21,7 @@
             tuiTab
             type="button"
         >
-            Архив
+            Журнал форм
         </button>
     </tui-tabs-with-more>
 
