--- a/src/app/children/head/components/header/header.css
+++ b/src/app/children/head/components/header/header.css
@@ -8,15 +8,61 @@ tui-tabs-with-more {
     border-bottom: 1px solid var(--day-base-base-02) !important;
 
     margin-bottom: 48px;
+    position: relative;
 }
 
-/* Tab контейнер слева */
+
+.header-cont {
+    order: -1;
+    margin: 0 auto 0 0;
+    max-width: 200px;
+    width: 100%;
+}
+
+.header-title {
+    font-family: var(--tui-font-text), sans-serif;
+    font-weight: 800;
+    font-size: 20px;
+    line-height: 120%;
+    color: var(--day-text-icons-link);
+
+    padding: 0;
+    margin: 0;
+}
+
 tui-tabs-with-more > ng-container {
     display: flex;
 }
 
-/* User button справа */
 .user-button {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
     margin-left: auto !important;
     padding-right: 0 !important;
+    order: 1;
+}
+
+.user-button-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100px;
+    padding: 8px;
+    background: var(--day-base-background);
+}
+
+.user-button-btn {
+    margin: 0 !important;
+    padding: 0 8px !important;
+}
+
+@media (max-width: 1200px) {
+    .header-cont {
+        display: none;
+    }
+
+    tui-tabs-with-more {
+        justify-content: center;
+    }
 }
