--- a/src/app/children/head/dashboard-head/children/new-forms-head/new-forms-head.html
+++ b/src/app/children/head/dashboard-head/children/new-forms-head/new-forms-head.html
@@ -5,7 +5,7 @@
 
     <div class="forms-select">
         <div (click)="navigateToFormType('type-1')" class="form-container">
-            <img class="form-image" height="198" src="assets/type-1.svg" width="198">
+            <img class="form-image" height="198" src="../../../../../../assets/type-1.svg" width="198">
 
             <p class="tui-text_h6">
                 Почасовой по времени такта
@@ -13,7 +13,7 @@
         </div>
 
         <div (click)="navigateToFormType('type-2')" class="form-container">
-            <img class="form-image" height="198" src="assets/type-2.svg" width="198">
+            <img class="form-image" height="198" src="../../../../../../assets/type-2.svg" width="198">
 
             <p class="tui-text_h6">
                 Почасовой по мощности рабочего места
@@ -21,7 +21,7 @@
         </div>
 
         <div (click)="navigateToFormType('type-3')" class="form-container">
-            <img class="form-image" height="198" src="assets/type-3.svg" width="198">
+            <img class="form-image" height="198" src="../../../../../../assets/type-3.svg" width="198">
 
             <p class="tui-text_h6">
                 Почасовой несколько номенклатур
@@ -29,7 +29,7 @@
         </div>
 
         <div (click)="navigateToFormType('type-4')" class="form-container">
-            <img class="form-image" height="198" src="assets/type-4.svg" width="198">
+            <img class="form-image" height="198" src="../../../../../../assets/type-4.svg" width="198">
 
             <p class="tui-text_h6">
                 Почасовой менее 1 изделия в час
@@ -37,7 +37,7 @@
         </div>
 
         <div (click)="navigateToFormType('type-5')" class="form-container">
-            <img class="form-image" height="198" src="assets/type-5.svg" width="198">
+            <img class="form-image" height="198" src="../../../../../../assets/type-5.svg" width="198">
 
             <p class="tui-text_h6">
                 Почасовой менее 1 изделия в смену
