--- a/src/app/children/components/loader/loader.css
+++ b/src/app/children/components/loader/loader.css
@@ -1,8 +1,9 @@
 .loading-spinner {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
     background: var(--day-base-background);
     z-index: 1000;
 }
