--- a/src/app/children/components/loader/loader.html
+++ b/src/app/children/components/loader/loader.html
@@ -1,3 +1,3 @@
-<div *ngIf="loading" class="loading-spinner">
+<div *ngIf="loading" [class]="'loading-spinner ' + spinnerClass">
     <div class="spinner"></div>
 </div>
