--- a/src/app/children/components/loader/loader.css
+++ b/src/app/children/components/loader/loader.css
@@ -1,9 +1,8 @@
 .loading-spinner {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 100vh;
     background: var(--day-base-background);
     z-index: 1000;
 }
