--- a/src/app/children/operator/dashboard-operator/children/form-edit-operator/form-edit-operator.css
+++ b/src/app/children/operator/dashboard-operator/children/form-edit-operator/form-edit-operator.css
@@ -19,9 +19,6 @@ app-header-operator {
 
     max-width: 1824px !important;
     width: 100% !important;
-
-    padding: 0 48px !important;
-    margin: 0 auto;
 }
 
 .form-table {
@@ -40,7 +37,7 @@ app-header-operator {
 
 .type-1-header {
     display: grid;
-    grid-template-columns: 192px 96px 96px 96px 96px 192px 96px 672px;
+    grid-template-columns: 192px 96px 96px 96px 96px 96px 96px 96px 192px 96px 672px;
 
     border-bottom: 1px solid var(--day-base-base-04);
 
@@ -73,7 +70,7 @@ app-header-operator {
 
 .type-1-rows {
     display: grid;
-    grid-template-columns: 192px 96px 96px 96px 96px 192px 96px 1fr;
+    grid-template-columns: 192px 96px 96px 96px 96px 96px 96px 96px 192px 96px 1fr;
 
     border-bottom: 1px solid var(--day-base-base-04);
 
