--- a/src/app/children/head/dashboard-head/children/new-forms-head/children/third-type/third-type.html
+++ b/src/app/children/head/dashboard-head/children/new-forms-head/children/third-type/third-type.html
@@ -176,6 +176,7 @@
         <div class="button-final">
             <button
                 (click)="createForm()"
+                [disabled]="isCompletedCreateForm()"
                 appearance="primary"
                 size="m"
                 tuiButton
