--- a/src/app/children/head/dashboard-head/children/new-forms-head/children/fifth-type/fifth-type.html
+++ b/src/app/children/head/dashboard-head/children/new-forms-head/children/fifth-type/fifth-type.html
@@ -117,6 +117,7 @@
         <div class="button-final">
             <button
                 (click)="createForm()"
+                [disabled]="isCompletedCreateForm()"
                 appearance="primary"
                 size="m"
                 tuiButton
