--- a/src/app/children/head/dashboard-head/children/new-forms-head/children/first-type/first-type.html
+++ b/src/app/children/head/dashboard-head/children/new-forms-head/children/first-type/first-type.html
@@ -152,6 +152,7 @@
         <div class="button-final">
             <button
                 (click)="createForm()"
+                [disabled]="isCompletedCreateForm()"
                 appearance="primary"
                 size="m"
                 tuiButton
